--- a/thesis/appendix/counter-examples.tex
+++ b/thesis/appendix/counter-examples.tex
@@ -28,7 +28,7 @@ Table \ref{tbl:cex-no-leak-cor} illustrates a counter-example for the \smv{NO_LE
     Therefore, for the sake of simplicity, the information flow labels of machine-words in memory or registers were combined to a single label\footnote{
         The labels have been combined by using the $ \sqcup $ operator, i.e. for a label $ w $, the combined label is $ \bigsqcup_{i} w_i $.
     }.
-    The two inner rows in the cells of the second major column denote the labels of the registers (\minrv{r}) and memory (\minrv{m}) respectively whereas the inner columns mark the index of the labels, e.g. in table \ref{tbl:cex-mem-i-soc} all registers and the cells of memory region zero are labelled with \PU{}, i.e. public and untrusted, whereas the cells of memory region one are labelled with \PT{}, i.e. public and trusted, in the initial state.
+    The two inner rows in the cells of the second major column denote the labels of the registers (\minrv{r}) and memory (\minrv{m}) respectively whereas the inner columns mark the index of the labels, e.g., in table \ref{tbl:cex-mem-i-soc} all registers and the cells of memory region zero are labelled with \PU{}, i.e. public and untrusted, whereas the cells of memory region one are labelled with \PT{}, i.e. public and trusted, in the initial state.
 
     The third major column shows the status of the processor.
     This column is separated into five inner columns as well.
