--- a/thesis/sections/conclusion.tex
+++ b/thesis/sections/conclusion.tex
@@ -40,7 +40,7 @@ Before a final summary of what has been achieved in this thesis will be given, w
 \end{description}
 
 Finally, the main contribution of this thesis is a new approach the verifying \glspl{isa} by higher-level information flow properties using a model checker.
-This approach promises to take into account unbounded numbers of transitions, i.e. instructions, is non-redundant and architecture independent and results in either architectural changes to combat vulnerabilities or rules for e.g. \gls{os} or compiler engineers that are:
+This approach promises to take into account unbounded numbers of transitions, i.e. instructions, is non-redundant and architecture independent and results in either architectural changes to combat vulnerabilities or rules for e.g., \gls{os} or compiler engineers that are:
 \begin{itemize}
     \item practical and verifiable themselves,
     \item concise, and
