--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -32,7 +32,7 @@ Conceptually, however, these two concepts should be distinguished.
 In the model, \smv{INIT} constraints are used to limit the search of the state space to \textit{valid} counter-examples only.
 Validity in this context means, that properties are not false to begin with and that the initial state of the architecture complies with the specification.
 Consequently, these constraints were introduced during the prove-refine loop as fixes to the model.
-Assumptions on the other hand are not part of the model in a technical sense but mark a result of the verification of the architecture: Each assumptions constitutes a rule for e.g. \gls{os} or compiler engineers to obey in order to write or generate non-vulnerable code.
+Assumptions on the other hand are not part of the model in a technical sense but mark a result of the verification of the architecture: Each assumptions constitutes a rule for e.g., \gls{os} or compiler engineers to obey in order to write or generate non-vulnerable code.
 
 \subsection{Initial Constraints}
 
@@ -234,7 +234,7 @@ To summarize all assumptions:
 At first, \smv{SAN_ON_CALL} and \smv{CLR_ON_RET} assumed that no direct flow of sensitive or malicious data is possible between user- and machine-mode (snippets \ref{snpt:san-on-call} and \ref{snpt:clr-on-ret}).
 Then, these assumptions were generalized to rule out detours into memory by \smv{NO_PUBLIC_WRITES} and \smv{NO_PUBLIC_READS} (snippets \ref{snpt:no-public-writes} and \ref{snpt:no-public-reads}).
 Finally, it was assumed that machine-mode must not freely alter access privileges of memory regions.
-It must clear or sanitize regions accordingly, depending on the previous access privileges, e.g. machine-mode must ensure to not forget secrets in memory that is made publicly accessible.
+It must clear or sanitize regions accordingly, depending on the previous access privileges, e.g., machine-mode must ensure to not forget secrets in memory that is made publicly accessible.
 
 \begin{figure}
     \begin{lstlisting}[
@@ -328,7 +328,7 @@ The so called \textit{SYSRET vulnerability} to the intel x86 architecture is lis
 To our knowledge, the most concise and freely available explanation of the vulnerability can be found in the blog post \textit{The Intel SYSRET Privilege Escalation} by George Dunlap published on the page of Xen Project, a community for virtualization-related open source projects which in part also have been affected by said vulnerability \cite{Dunlap19}.
 
 The x86 architecture provides multiple ways to switch between privilege modes.
-In principle, these ways work analogously to how the MINRV8 architecture changes privilege modes: either an interrupt/exception leads to the privilege escalation or a dedicated instruction is executed that changes privilege mode, e.g. \minrv{Ecall} in case of the MINRV8 architecture.
+In principle, these ways work analogously to how the MINRV8 architecture changes privilege modes: either an interrupt/exception leads to the privilege escalation or a dedicated instruction is executed that changes privilege mode, e.g., \minrv{Ecall} in case of the MINRV8 architecture.
 In general, when changing the privilege mode, the \lstinline{RIP} register, which is the \gls{pc} equivalent for x86 architectures, and the stack-pointer are set to the respective version of the targeted privilege-mode.
 The designers of the architecture found that parts of the normal privilege mode changing routines could be left out in some scenarios to improve performance.
 One of this routines to be left out was changing the stack-pointer by hardware.
@@ -503,7 +503,7 @@ The eight assumptions introduced in section \ref{sec:assumptions} constrain stre
 Whenever machine-mode is called from user-mode by the \minrv{Ecall} instruction or there is an external interrupt, machine-mode must not use memory or \gls{csr} related instructions in the area colored in yellow until some form of a sanitization procedure (\smv{SAN}) has been completed.
 This leads to the integrity labels of inputs to these instructions being high after the sanitization procedure.
 This property is made stable by the \smv{NO_PULIC_READS} and \smv{SAN_(CACHE)_ON_CLASSIFICATION} assumptions which ensure that no malicious data is loaded from memory or cache as long as machine-mode has control.
-If any of these are not assumed, the inputs to memory or \gls{csr} related instructions might become low e.g. somewhere in the orange colored area of the second row.
+If any of these are not assumed, the inputs to memory or \gls{csr} related instructions might become low e.g., somewhere in the orange colored area of the second row.
 
 In general, during execution of a trap handler in machine-mode, confidential data will be handled and therefore, the confidentiality labels of the registers become high at some point.
 The \smv{CLR_ON_RET} assumption then enforces that before the \minrv{Mret} instruction is executed by machine-mode to hand back control to user-mode, a procedure to clear the contents of the registers must be executed (\smv{CLR}) after which no other confidential data may be loaded into registers.
