thesis: Fixes due to proof-reading of my supervisor

--- a/thesis/defs/acronyms.tex
+++ b/thesis/defs/acronyms.tex
@@ -33,7 +33,7 @@
 \newacronym{mret}{MRET}{machine trap return}
 \newacronym{auipc}{AUIPC}{add upper immediate to PC}
 \newacronym{srl}{SRL}{shift right logically}
-\newacronym{csrrw}{CSRRW}{atomic read/write word \gls{csr}}
+\newacronym{csrrw}{CSRRW}{atomic read/write word CSR}
 
 % timer and performance counting CSRs
 \newacronym{mtime}{mtime}{machine time}
