thesis: Small improvements

--- a/thesis/preface/abstract.tex
+++ b/thesis/preface/abstract.tex
@@ -13,7 +13,7 @@ In this scenario, it is considered whether
 \end{enumerate*}
 Timing channels are excluded.
 
-Throughout the course of this thesis, aforementioned approach will be applied to a simplified version of the RISC-V architecture, the MINRV8 architecture.
+We develop a simplified version of the RISC-V architecture, the MINRV8 architecture, to which aforementioned approach will be applied.
 Three information flow properties applying to this architecture will be developed and verified using nuXmv.
 The result of this are eight assumptions that grant the absence of any information flow property violation by any program running on the MINRV8 architecture.
 These results are tested by showing that our approach can detect the cache poisoning \cite{Wojtczuk09} and SYSRET vulnerabilities \cite{SYSRET-vuln,Dunlap19} applying to the x86 architecture without any manual intervention besides the implementation of the vulnerabilities.
