--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -31,7 +31,7 @@ The key motivation of this work is best summarized by the conclusion of the pape
     Unfortunately, the size and complexity of architecture specifications is such that it seems inevitable that specifications will contain bugs and our previous work confirms this supposition.
 
     While it is common to debug specifications by \textit{testing} the specification, this paper proposes a different approach:
-    we define a set of formal properties that should hold for the specification and we \textit{formally verify} the architecture specification satisfies these properties.
+    we define a set of formal properties that should hold for the specification and we \textit{formally verify} that the architecture specification satisfies these properties.
     We think of the relationship between the properties and the specification as being like the relationship between a nation's constitution and a nation's laws:
     the constitution is concise enough that everyone can read them while the laws are too large for effective review; the constitution can be used to test whether existing or proposed laws are compatible with high-level goals; and the constitution is stable and changes very, very slowly.
 \end{displaycquote}
